<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll_ItemEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/layout_ItemEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edit_item"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/photo_annuncio"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/photo_annuncio_background"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/photo_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_weight="1" />

                <ProgressBar
                    android:id="@+id/progressBar3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/photo_annuncio_background"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/photo_annuncio"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="@+id/photo_annuncio" />

                <ImageButton
                    android:id="@+id/addImageButton2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="3dp"
                    android:background="@color/background_add_image"

                    android:contentDescription="@string/new_photo"
                    android:src="@drawable/ic_add_a_photo_white_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toEndOf="@+id/photo_annuncio"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_weight="1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.65" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/statusTitleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0"
                android:text="@string/status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/availableButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="changeStatus"
                        android:text="@string/available" />

                    <RadioButton
                        android:id="@+id/blockButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:onClick="changeStatus"
                        android:text="@string/unavailable" />

                    <RadioButton
                        android:id="@+id/soldButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:onClick="changeStatus"
                        android:text="@string/sold" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/buyerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/sell_to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Spinner
                    android:id="@+id/buyerSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sub_category"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/categoryField"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:prompt="@string/prompt_category" />

                <Spinner
                    android:id="@+id/subCategoryField"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:prompt="@string/prompt_subcategory" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/title"
                android:padding="4dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconMode="clear_text"
                app:helperText="@string/insert_title"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_title_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleFieldText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/price"
                android:padding="4dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconMode="clear_text"
                app:helperText="@string/item_price"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_euro_symbol_black_24dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/priceFieldText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:endIconMode="clear_text"
                app:helperText="@string/describe_product"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_description_black_24dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/descriptionFieldText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="500"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationFieldEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:helperText="@string/help_location"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_location_on_black_24dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/locationFieldText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/position"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/expireLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/expire_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expireField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="11"
                    android:hint="@string/expiredate_default"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary_text" />
            </LinearLayout>


            <Space
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="8dp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>